syntax = "proto3";
option go_package = "/message";

message Msg {
    string PID = 1;
    int32 type = 2;
    bytes data = 3;
}

message VoteMessage {
    bytes Signature = 1;
    uint64 round = 2;
    string event = 3;
    bytes VRF = 4;
    bytes Proof = 5;
    bytes ParentHash = 6;
    bytes Hash = 7;
}

message Proposal {
    uint64 Round = 1;
    bytes Hash = 2;
    bytes Prior = 3;
    bytes VRF = 4;
    bytes Proof = 5;
    bytes Pubkey = 6;
    bytes Block = 7;
}

message Transaction {
    bytes From = 1;
    bytes To = 2;
    uint64 Nonce = 4;
    uint64 Type = 5;
    bytes Data = 6;
    bytes Signature = 7;
    uint64 Id = 8;
    string Addr = 9;
}

message TxRes {
    bytes TxHash = 1;
    bytes Data = 2;
}

message PendingRequest {
    uint64 Nonce = 1;
    string URL = 2;
    uint64 Id = 3;
    uint64 Type = 4;
    string Addr = 5;
    bytes Data = 6;
}

message PendingRequestRes{
    bytes TxHash = 1;
    bytes Data = 2;
}

message Block {
    uint64 Round = 1;
    bytes ParentHash = 2;
    bytes Author = 3;
    bytes AuthorVRF = 4;
    bytes AuthorProof = 5;
    int64 Time = 6;
    bytes Seed = 7;
    bytes Proof = 8;
    repeated Transaction Txs = 9;
    bytes StateHash = 10;
    bytes Signature = 11;
    bytes Data = 12;
    repeated PendingRequest Reqs = 13;
    repeated bytes ResHash = 14;
    uint64 TxEpoch = 15;
    uint64 OracleEpoch = 16;
    repeated TxRes ResTx = 17;
    repeated PendingRequestRes EWRes = 18;
}

message AccessResponse {
    bytes ParentHash = 1;
    bytes RequestHash = 2;
    bytes data = 3;
    bytes Signature = 4;
    bytes VRF = 5;
    bytes Proof = 6;
    uint64 Id = 7;
}

message ProposedTx {
    uint64 Epoch = 1;
    repeated Transaction Txs = 2;
}

message StateHash {
    uint64 Epoch = 1;
    bytes StateHash = 2;
}

message OraclePeerProposal {
    bytes Pubkey = 1;
    bytes Proof = 2;
    bytes Vrf = 3;
    uint64 Epoch = 4;
    uint64 Weight = 5;
}
